Add Spring configuration. Create RoleEntity, RoleMapper, RoleBasicDto, RoleService and RoleController